# Library

./: .gitignore  LICENSE  LICENSES.md  README.md  pyproject.toml
bench/: coder-load-times-5700xt.csv  e1-vram-headroom.sh  e2-cold-load-times.sh  e3-corpus.txt  e3-edits.ndjson  e3-embeds.ndjson  e3-summary.txt  e3-vram.csv  e3-vulkan-soak.sh  vram-baseline-5700xt.csv
docs/: architecture.md  audio-ingest-research.md  edit-prediction-on-secondary-research.md
library.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_cache.py  test_chunkers.py  test_converters.py  test_fetcher.py  test_opencode_state.py  test_searcher.py  test_server_e2e.py  test_summarizer.py
