[project]
name = "library"
version = "0.1.0"
description = "Library -- unified research + file + skill MCP server"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=0.9.0",
    "readability-lxml>=0.8.1",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["library*"]
exclude = ["tests*"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
library = "library.server:main"
